<resources>
    <string name="app_name">Paramed</string>
    <string name="login_label1">Username:</string>
    <string name="login_label2">Password:</string>
    <string name="user_hint">Username</string>
    <string name="passw_hint">Password</string>
    <string name="authLogin">LOGIN</string>
    <string name="loginTitle">Sign in</string>
    <string name="userError">Enter username</string>
    <string name="passError">Enter password</string>
    <string name="loginError">Username or password incorrect</string>
    <string name="title_activity_display_patient_info">DisplayPatientInfo</string>
    <string name="title_activity_patient_num_lookup">patientNumLookup</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>